--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,16 @@
 <div class="footerbar">
     <div class="container">
         <div class="footer-copyright" id="footer-copyright">
-            <div class="copyright-text">©️{{ site.time | date: '%Y' }} | Template by -<a href="{{site.url}}"> <span id="unangning_eu" title="unangning_eu">{{site.author}}</span></a> | Powered by <a href="https://github.com" rel="dofollow" target="_blank" title="Github Templates">Github</a></div>
+            <div class="copyright-text">©️{{ site.time | date: '%Y' }} | Template by -<a href="{{author.url | relative_url}}"> <span id="unangning_eu" title="unangning_eu">{{site.author}}</span></a> | Powered by <a href="https://github.com" rel="dofollow" target="_blank" title="Github Templates">Github</a></div>
             </div>
             <div class="footer-menu section" id="footer-menu" name="Footer Menu">
                 <div class="widget LinkList" data-version="2" id="LinkList155">
                     <div class="widget-content">
                         <ul class="link-list">
-                        <li><a href="{{site.baseurl}}">Home</a></li>
+                        <li><a href="{{site.baseurl}}/">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact Us</a></li>
-                        <li><a href="https://github.com/">Fork <i class="fab fa-github"></i></a></li>
+                        <li><a href="https://github.com/daffadev-inc/daffa_blog">Fork <i class="fab fa-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
