--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@ layout: compress
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/icons/css/all.min.css' | relative_url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1171588080744378" crossorigin="anonymous"></script>
+<script type='application/ld+json'>{"@context":"http://schema.org","@type":"WebSite","name":"{{site.title}}","url":"{{site.url}}","potentialAction":{"@type":"SearchAction","target":"{{site.url}}/search?q={search_term_string}","query-input":"required name=search_term_string"}}</script>
     <!-- Created with Jekyll -->
   </head>
 
