--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@ layout: compress
       {{ content }}
 {% if page.url == '/' %}
   <div class="grid">
-    <article class="card post">
+    <article class="card">
             {% include adsense.html %}
     </article>
   </div>
