--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,6 +34,10 @@
     height: 200px;
     width: 100%;
     object-position: center;}
+.adsense_content {
+    border-radius: 8px !important;
+    overflow: hidden !important;
+    }
 }
 .post_sidebar {
     width: 100%;
