--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,6 +22,8 @@
     border-radius: 8px !important;
     overflow: hidden !important;
     border: 1px solid #0000002d;
+    width: 100%;
+    height: 100%;
     }
 }
 .post_archive {display: block;
