--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,6 @@ layout: compress
 	<script src="{{ '/assets/js/bootstrap/dist/bootstrap.bundle.min.js' | relative_url }}"></script>
 	<script src="{{ '/assets/js/popper/umd/popper.min.js' | relative_url }}"></script>
     {% include analytics.html %}
+    {% include mintme.html %}
   </body>
 </html>
