--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,6 +42,7 @@
     height: 200px;
     width: 100%;
     object-position: center;}
+.card-body {padding: 10px;}
 }
 .post_sidebar {
     width: 100%;
